@@ -2,6 +2,7 @@ import json
 
 from PyQt5.QtWidgets import *
 from PyQt5.QtCore import *
+from PyQt5.QtGui import *
 import sys
 
 signalToMenuIndex = {
